<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_icon" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Sign-Up"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/infomo_tv_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="top"
        android:text="@string/txt_infomo_terms_conditions"
        android:layout_above="@+id/rl_action_terms_buttons"
        android:layout_below="@+id/header"/>
    <RelativeLayout
        android:id="@+id/rl_action_terms_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_infomo_terms_decline"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_decline"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@+id/btn_infomo_terms_accept"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_accept"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>