<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_icon" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/adsettings_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_margin="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/preferences_heading_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/my_custom_font"
            android:text="@string/user_preferences_heading"
            android:textColor="@color/button_color"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/preferences_help_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="alertDialogPreferencesHelp"
            android:padding="2dp"
            android:src="@drawable/bsnl_help" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_select_all"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/check_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/checkbox_select_all"
            android:text="Select All"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false"
            android:theme="@style/CheckBoxBackgound" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/konvers_chat_time" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_infomo_pref_continue"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/go_next"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_infomo_reset"
            style="@style/ButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/reset"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_infomo_pref_skip"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/go_back"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/interestrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_layout"
            android:layoutAnimation="@anim/layout_animation_left_right" />

        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/preferences_btn_cancel"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/button_separator"
                android:layout_toStartOf="@+id/button_separator"
                android:text="@string/cancel_button" />

            <TextView
                android:id="@+id/button_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/preferences_btn_submit"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/button_separator"
                android:layout_toRightOf="@+id/button_separator"
                android:text="@string/save_button" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>